# xenos

./: CMakeLists.txt  README.md  Xenos.jucer
Source/: ParamListener.h  ParamMenu.h  ParamSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Quantizer.cpp  Quantizer.h  RandomSource.cpp  RandomSource.h  RandomWalk.cpp  RandomWalk.h  Scale.cpp  Scale.h  Utility.cpp  Utility.h  Xenos.h
